--- a/index.html
+++ b/index.html
@@ -1,39 +1,46 @@
+<!DOCTYPE HTML>
+
 <html>
-	<head>
-	<meta charset="utf-8" />
-			<title>Des objets connectés autonomes</title>
-			<link rel="stylesheet" href="style.css"/>
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-			
-	</head>
-	<body>
-		<header>
-			<h1>Des objets connectés autonomes</h1>
-		</header>
-		<nav id="nav">
 
-			<div id="presentation">Présentation</div><div id="experimentation">Expérimentations</div><div id="app">Applications</div><div id="biblio">Bibliographie</div>
-	
+<head>
+    <meta charset="utf-8" />
+    <title>Des objets connectés autonomes</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-		</nav>
-		<section id="count">
-			<div id="dispD" class="button">Diapo</div>
-			<p id="c">1</p>
-		</section>
-		<section id="diapo">
-			<div id="prev" class="button">&lt</div>
-			<image id="image" src=""></image>
-			<div id="next" class="button">&gt</div>
-		</section>
-		<section id="content">
-			
-		</section>
-		<footer>
-			<p>
-			Groupe 3 : Bilal Molli - Barthélémy Paléologue - Le Reste Malo<br/>
-			Première Se, Loquidy<br/>
-			</p>
-		</footer>
-	</body>
-	<script src="script.js"></script>
+</head>
+
+<body>
+    <header>
+        <h1>Des objets connectés autonomes</h1>
+    </header>
+    <nav id="nav">
+        <ul id="menu">
+            <li id="presentation">Présentation</li>
+            <li id="experimentation">Expérimentations</li>
+            <li id="app">Applications</li>
+            <li id="biblio">Bibliographie</li>
+        </ul>
+
+    </nav>
+    <section id="count">
+        <div id="toggleDiapo">Diapo</div>
+        <p id="c">1</p>
+        <div id="diapo">
+            <div id="prev" class="button">&lt</div>
+            <image id="image" src=""></image>
+            <div id="next" class="button">&gt</div>
+        </div>
+    </section>
+    <section id="content">
+
+    </section>
+    <footer>
+        <p>
+            Groupe 3 : Bilal Molli - Barthélémy Paléologue - Le Reste Malo<br/> Première Se, Loquidy<br/>
+        </p>
+    </footer>
+</body>
+<script src="script.js"></script>
+
 </html>
