--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav id="nav">
         <ul id="menu">
             <li id="presentation">Présentation</li>
-            <li id="experimentation">Expérimentations</li>
+            <li id="exp">Expérimentations</li>
             <li id="app">Applications</li>
             <li id="biblio">Bibliographie</li>
         </ul>
