--- a/index.html
+++ b/index.html
@@ -16,15 +16,20 @@
     </header>
     <nav id="nav">
         <ul id="menu">
-            <li id="presentation">Présentation</li>
-            <li id="exp">Expérimentations
+            <li id="presentation"><span>Présentation</span></li>
+            <li id="exp"><span>Expérimentations</span>
                 <ul>
-                    <li>Piezoélectricité</li>
-                    <li>Effet Seebek</li>
+                    <li><span>Piezoélectricité</span></li>
+                    <li><span>Effet Seebek</span></li>
                 </ul>
             </li>
-            <li id="app">Applications</li>
-            <li id="biblio">Bibliographie</li>
+            <li id="app"><span>Applications</span>
+                <ul>
+                    <li><span>Piezoélectricité</span></li>
+                    <li><span>Effet Seebek</span></li>
+                </ul>
+            </li>
+            <li id="biblio"><span>Bibliographie</span></li>
         </ul>
 
     </nav>
