--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <nav id="nav">
         <ul id="menu">
             <li id="presentation"><span>Présentation</span></li>
-            <li id="exp"><span>Expérimentations</span>
+            <li><span>Expérimentations</span>
                 <ul>
-                    <li><span>Piezoélectricité</span></li>
-                    <li><span>Effet Seebek</span></li>
+                    <li><span id="piezo">Piezoélectricité</span></li>
+                    <li><span id="seebek">Effet Seebek</span></li>
                 </ul>
             </li>
             <li id="app"><span>Applications</span>
