--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <li id="presentation"><span>Présentation</span></li>
             <li><span>Expérimentations</span>
                 <ul>
-                    <li><span id="piezo">Piezoélectricité</span></li>
-                    <li><span id="seebek">Effet Seebek</span></li>
+                    <li id="piezo"><span>Piezoélectricité</span></li>
+                    <li id="seebek"><span>Effet Seebek</span></li>
                 </ul>
             </li>
             <li id="app"><span>Applications</span>
@@ -42,6 +42,7 @@
         </div>
         <p id="c">1</p>
     </section>
+    <hr/>
     <section id="content">
 
     </section>
