--- a/piezo.html
+++ b/piezo.html
@@ -1,8 +1,17 @@
 <h3>La Piézoélectricité</h3>
 <p>
-    Definition :<br/> “La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique”.<br/>
+    Definition :<br/> “La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique”.
+    <br/><br/>
 </p>
-<video src="img/video1.mp4" style="with:360px; height:640px;" controls></video>
+<h4>Objectif</h4>
+
+<p>Nous cherchons à montrer par nos expériences qu'il est possible d'alimenter un objet connécté avec la seule énergie de la piezoélectricité. Cela permettrait de se passer de batterie et de toute forme d'énergie polluante utilisée dans la recharge d'un
+    appareil connecté.
+</p>
+
+
+
+<video src="img/video1.mp4" style="width:360px; height:640px;" controls></video>
 <p>
     Des utilisations :<br/> - Vibrations (voitures, camions, avions, etc)<br/> - Montres à quartz<br/>
 </p>
