--- a/index.html
+++ b/index.html
@@ -16,33 +16,22 @@
     </header>
     <nav id="nav">
         <ul id="menu">
-            <li id="presentation"><span>Présentation</span></li>
-            <li><span>Expérimentations</span>
-                <ul>
-                    <li id="piezo"><span>Piezoélectricité</span></li>
-                    <li id="seebek"><span>Effet Seebek</span></li>
-                </ul>
-            </li>
-            <li id="app"><span>Applications</span>
-                <ul>
-                    <li><span>Piezoélectricité</span></li>
-                    <li><span>Effet Seebek</span></li>
-                </ul>
-            </li>
-            <li id="biblio"><span>Bibliographie</span></li>
+            <li id="presentation">Présentation</li>
+            <li id="exp">Expérimentations</li>
+            <li id="app">Applications</li>
+            <li id="biblio">Bibliographie</li>
         </ul>
 
     </nav>
     <section id="count">
-        <div id="toggleDiapo">Diapo</div>
+        <div id="prev" class="button">&lt</div>
+		<div id="toggleDiapo">Diapo</div>
+		<div id="next" class="button">&gt</div>
         <div id="diapo">
-            <div id="prev" class="button">&lt</div>
             <image id="image" src=""></image>
-            <div id="next" class="button">&gt</div>
         </div>
         <p id="c">1</p>
     </section>
-    <hr/>
     <section id="content">
 
     </section>
