--- a/exp.html
+++ b/exp.html
@@ -9,4 +9,27 @@ Definition :<br/>
 Des utilisations :<br/>
  - Vibrations (voitures, camions, avions, etc)<br/>
  - Montres à quartz<br/>
+ - Marche humaine<br/>
+ - Cellules installées dans le sol<br/>
+</p>
+<p>
+poid de référence : 178.1g = 0.1781kgr = 1.75N<br/>
+<br/>
+surface de contact du support : 3^2*PI = 28.26mm^2  28.26e-6 = 2.8e-5m2<br/>
+<br/>
+Pression de référence : 1.75/2.8e-6 = 625 000 Pa<br/>
+<br/>
+d33 quartz = 2.33e-12 V/m<br/>
+<br/>
+Cref = 1.456e-6C et <br/>
+<br/>
+1C = 1000mA.s<br/>
+<br/>
+ref = 1.456e-3mA.s<br/>
+<br/>
+ref = 5241e-3mA.h<br/>
+<br/>
+ref ~= 5mA.h<br/>
+<br/>
+Si on prend Bilal 40kg donc 392.4N (on prendra pour acquis que Bilal applique une force égale à la moitié de son poid à chaque pas) soit 224 fois plus que le poid de référence, on produit 0.5A.h par pas si on garde la même surface de contact.<br/>
 </p>
