--- a/index.html
+++ b/index.html
@@ -16,17 +16,23 @@
     </header>
     <nav id="nav">
         <ul id="menu">
-            <li id="presentation">Présentation</li>
-            <li id="exp">Expérimentations</li>
-            <li id="app">Applications</li>
-            <li id="biblio">Bibliographie</li>
+            <li><a href="presentation.html">Présentation</a></li>
+            <li><a>Expérimentations</a>
+                <ul>
+                    <li><a href="solar.html">Capteur Solaire</a></li>
+                    <li><a href="piezo.html">Piezoélectricité</a></li>
+                    <li><a href="seebek.html">L'effet seebeck</a></li>
+                </ul>
+            </li>
+            <li><a href="app.html">Applications</a></li>
+            <li><a href="biblio.html">Bibliographie</a></li>
         </ul>
 
     </nav>
     <section id="count">
         <div id="prev" class="button">&lt</div>
-		<div id="toggleDiapo">Diapo</div>
-		<div id="next" class="button">&gt</div>
+        <div id="toggleDiapo">Diapo</div>
+        <div id="next" class="button">&gt</div>
         <div id="diapo">
             <image id="image" src=""></image>
         </div>
