--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
                 </ul>
             </li>
             <li><a href="app.html">Applications</a></li>
-            <li><a href="biblio.html">Bibliographie</a></li>
+            <li><a href="annexes.html">Annexes</a>
+                <ul>
+                    <li><a href="biblio.html">Bibliographie</a></li>
+                    <li><a href="photos.html">Photos</a></li>
+                    <li><a href="graph.html">Graphiques</a></li>
+                </ul>
+            </li>
         </ul>
 
     </nav>
@@ -38,6 +44,7 @@
         </div>
         <p id="c">1</p>
     </section>
+    <hr/>
     <section id="content">
 
     </section>
