--- a/presentation.html
+++ b/presentation.html
@@ -1,12 +1,7 @@
 <h2>Présentation Générale</h2>
-<h3>Problématique : Comment alimenter des objets connectés sans utiliser de batterie ?</h3>
+<h3>Problématique</h3>
+<h4 id="pb">Pouvons nous alimenter des objets connectés sans utiliser de batterie au lithium, juste grâce à l'énergie du milieu ambiant ?</h4>
 <p>
-Iddées :<br/>
-<br/>
- - blood sugar<br/>
- - thermoélectrique<br/>
- - pression atmosphérique<br/>
- - piézoélectrique<br/>
- - coefficient de salinité<br/>
- - Loi de faraday : le wifi<br/>
+    Iddées :<br/>
+    <br/> - blood sugar<br/> - thermoélectrique<br/> - pression atmosphérique<br/> - piézoélectrique<br/> - coefficient de salinité<br/> - Loi de faraday : le wifi<br/>
 </p>
