--- a/presentation.html
+++ b/presentation.html
@@ -1,7 +1,6 @@
 <h2>Présentation Générale</h2>
 <h3>Problématique</h3>
+
+<p>Après une semaine laborieuse de recherche, nous avons finalement décider de travailler sur l'extraction de l'énergie du milieu ambiant. Nous avons donc formulé cette problématique :</p>
+
 <h4 id="pb">Pouvons nous alimenter des objets connectés sans utiliser de batterie au lithium, juste grâce à l'énergie du milieu ambiant ?</h4>
-<p>
-    Iddées :<br/>
-    <br/> - blood sugar<br/> - thermoélectrique<br/> - pression atmosphérique<br/> - piézoélectrique<br/> - coefficient de salinité<br/> - Loi de faraday : le wifi<br/>
-</p>
