--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <hr/>
     <footer>
         <p>
-            Groupe 3 : Bilal Molli - Barthélémy Paléologue - Le Reste Malo<br/> Première Se, Loquidy<br/>
+            Groupe 3 : Bilal Molli - Barthélémy Paléologue - Le Reste Malo<br/> 1<sup>ère</sup>Se, Loquidy<br/>
         </p>
     </footer>
 </body>
