--- a/presentation.html
+++ b/presentation.html
@@ -4,3 +4,7 @@
 <p>Après une semaine laborieuse de recherche, nous avons finalement décider de travailler sur l'extraction de l'énergie du milieu ambiant. Nous avons donc formulé cette problématique :</p>
 
 <h4 id="pb">Pouvons nous alimenter des objets connectés sans utiliser de batterie au lithium, juste grâce à l'énergie du milieu ambiant ?</h4>
+
+<h3>L'énergie et les objets connectés</h3>
+
+<p></p>
