--- a/presentation.html
+++ b/presentation.html
@@ -7,4 +7,20 @@
 
 <h3>L'énergie et les objets connectés</h3>
 
+<p>Le nombre d'objet connectés est en constante augmentation. De votre téléphone à votre montre en passant par votre réfrigérateur, ils sont partout. Nous sommes de plus en plus nombreux à en avoir et nous avons de plus en plus par personne (On estime leur
+    nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tout ses objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu recyclées. Il faut donc
+    trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objet de ce TPE est de donner des éléments de réponse à ce probème.</p>
+
+
+<h3>L'énergie solaire</h3>
+
+<p></p>
+
+<h3>La piezoélectricité</h3>
+
+<h4>Définition</h4>
+<p></p>
+
+<h3>L'effet seebeck</h3>
+
 <p></p>
