--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <h1>Des objets connectés autonomes</h1>
+        <h4>TPE de Bilal Molly, Malo Lereste et Barthélémy Paléologue</h4>
     </header>
     <nav id="nav">
         <ul id="menu">
