correction de fautes

--- a/piezo.html
+++ b/piezo.html
@@ -5,7 +5,7 @@
 </p>
 <h4>Objectif</h4>
 
-<p>Nous cherchons à montrer par nos expériences qu'il est possible d'alimenter un objet connécté avec la seule énergie de la piezoélectricité. Cela permettrait de se passer de batterie et de toute forme d'énergie polluante utilisée dans la recharge d'un
+<p>Nous cherchons à montrer par nos expériences qu'il est possible d'alimenter un objet connécté avec la seule énergie de la piezoélectricité. Cela permettrait de se passer de batteries et de toute forme d'énergie polluante utilisée dans la recharge d'un
     appareil connecté.
 </p>
 
