--- a/biblio.html
+++ b/biblio.html
@@ -1,1 +1,5 @@
 <h2>Bibliographie</h2>
+
+<p>Manufacturing Processes 1: Cutting Par Fritz Klocke
+    <br/>Handbook of Chemical and Biological Sensors publié par R.F Taylor,Jerome S. Schultz (formule)
+</p>
