--- a/biblio.html
+++ b/biblio.html
@@ -2,4 +2,8 @@
 
 <p>Manufacturing Processes 1: Cutting Par Fritz Klocke
     <br/>Handbook of Chemical and Biological Sensors publié par R.F Taylor,Jerome S. Schultz (formule)
+    <br/>Mechanical Vibrations: Applications to Equipment Par Yvon Mori (formule)
+    <br/>BIOMEDICAL INSTRUMENTATION AND MEASUREMENTS, 2nd Ed. Par ANANDA NATARAJAN, R.
+    <br/>http://www.piezo.com/tech1terms.html
+    <br/>https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html
 </p>
