--- a/piezo.html
+++ b/piezo.html
@@ -15,11 +15,15 @@ Nous allons donc utiliser le logiciel Latis Pro afin de mesurer le voltage et de
 De plus nous allons déterminer quelle est la zone du pied la plus intéressante pour placer la cellule.
 </p>
 
-<p>Matériel :<br/>
+<p id="mat">Matériel :<br/>
 Cellule piezoélectrique :<br/>
-<img src="data/piezo.jpg"/>
+<img src="data/piezo.jpg"/><br/>
 Centrale Latis :<br/>
+<img src="data/latis.jpg"/><br/>
 Du scotch :<br/>
+<img src="data/scotch.jpg"/><br/>
+et Bilal :<br/>
+<img src="data/bilal.jpg"/><br/>
 </p>
 
 <p id="pr">Résultats :<br/>
