--- a/piezo.html
+++ b/piezo.html
@@ -27,13 +27,16 @@ et Bilal :<br/>
 </p>
 
 <p id="pr">Résultats :<br/>
-Sous le bout du pied : <br/>
+Quand Bilal marche 10s avec la cellule piezoélectrique sous la pointe de sa chaussure : <br/>
+<video src="data/avant1.mp4" controls></video><br/><br/>
 <img src="data/voltmarche2_devant.JPG"/><br/>
 On peut observer que l'on atteint tout juste 1V à chaque pas.<br/>
 Sous le milieu du pied :<br/>
+<video src="data/milieu1.mp4" controls></video><br/><br/>
 <img src="data/voltmarche1_milieu.JPG"/><br/>
 Cette fois-ci, on atteint 3V à chaque pas, le milieu du pied est donc bien plus aproprié afin de placer une cellule.<br/>
 Sous le talon :<br/>
+<video src="data/arriere1.mp4" controls></video><br/><br/>
 <img src="data/voltmarche3_arriere.JPG"/><br/>
 Sous le talon, le voltage est légèrement plus faible, on atteint 2V à chaque pas<br/>
 Ensuite, nous avons décidé de tester une cellule dans la chaussure :<br/>
@@ -60,4 +63,4 @@ Malgré cela, nous pourrions envisager des routes ou même un sol très féquent
 
 
 
-<video src="img/video1.mp4" style="width:360px; height:640px;" controls></video>
+<!--<video src="img/video1.mp4" style="width:360px; height:640px;" controls></video>-->
