formule Q=d33*F plus propre

--- a/piezo.html
+++ b/piezo.html
@@ -49,7 +49,8 @@ Nous avons pu observer que en mettant une cellule sous le milieu du pied, on pou
 <p>Partie 2: Trouver l'intensité générée (Avec des maths)</p>
 
 <p>On a F la pression appliquée par Bilal à chaque pas (la moitié de son poid) sur la surface de la cellule, d33 le coefficient piezoélectrique qui dépend du matériau de la cellule (ici du quartz) et Q la charge électrique générée par la contrainte mechanique<br/>
-Or comme nous l'ont appris les documents scientifiques (allez check la bibliographie pour plus d'informations) que nous avons consulté : Q = d33 x F<br/>
+Or comme nous l'ont appris les documents scientifiques (allez check la bibliographie pour plus d'informations) que nous avons consulté :<br/>
+Q = d33 x F<br/>
 On sait que F = 196.2N/2.8x10<sup>-15</sup>m<sup>2</sup> et d33 = 2.33x10<sup>-12</sup><br/>
 Par conséquent, dans le cas de Bilal, la charge en Coulombs générée par Bilal à chaque pas est de 1.456x10<sup>-6</sup>C<br/>
 Or 1C = 1000mAs donc Bilal génère 1.456x10<sup>-3</sup>mAs ce qui nous fait donc à peu près 5mAh.<br/>
