liens de biblio clickable

--- a/biblio.html
+++ b/biblio.html
@@ -4,6 +4,6 @@
     <br/>Handbook of Chemical and Biological Sensors publié par R.F Taylor,Jerome S. Schultz (formule)
     <br/>Mechanical Vibrations: Applications to Equipment Par Yvon Mori (formule)
     <br/>BIOMEDICAL INSTRUMENTATION AND MEASUREMENTS, 2nd Ed. Par ANANDA NATARAJAN, R.
-    <br/>http://www.piezo.com/tech1terms.html
-    <br/>https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html
+    <br/><a href="http://www.piezo.com/tech1terms.html">http://www.piezo.com/tech1terms.html</a>
+    <br/><a href="https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html">https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html</a>
 </p>
