--- a/presentation.html
+++ b/presentation.html
@@ -4,13 +4,13 @@
 
 <p>Après une semaine laborieuse de recherche, nous avons finalement décidé de travailler sur l'extraction de l'énergie du milieu ambiant. Nous avons donc formulé cette problématique :</p>
 
-<h4 id="pb">Pouvons nous alimenter des objets connectés sans utiliser de batterie au lithium, juste grâce à l'énergie du milieu ambiant ?</h4>
+<h4 id="pb">Comment peut-on rendre les objets connectés électriquement autonomme ?</h4>
 
 <h3>L'énergie et les objets connectés</h3>
 
 <p>Le nombre d'objets connectés est en constante augmentation. De votre téléphone à votre montre en passant par votre réfrigérateur, ils sont partout. Nous sommes de plus en plus nombreux à en avoir et nous en avons de plus en plus par personne (On estime leur
-    nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tout ses objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu recyclées. Il faut donc
-    trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objet de ce TPE est de donner des éléments de réponse à ce probème.</p>
+    nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tout ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu recyclées. Il faut donc
+    trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce probème.</p>
 
 
 <h3>L'énergie solaire</h3>
