--- a/piezo.html
+++ b/piezo.html
@@ -9,8 +9,8 @@
 
 <h5>Application à la marche des êtres humains</h5>
 
-<p>Protocole :<br/> Nous allons "scotcher" une cellule piezoélectrique au dessous de la semelle de Bilal et mesurer le voltage produit par une marche de 10 secondes. Nous allons donc utiliser le logiciel Latis Pro afin de mesurer le voltage et de tracer des
-    graphqiues. De plus nous allons déterminer quelle est la zone du pied la plus intéressante pour placer la cellule.
+<p>Protocole :<br/> Nous allons "scotcher" une cellule piezoélectrique au dessous de la semelle de Bilal et mesurer le voltage produit par une marche de 10 secondes. Nous allons donc utiliser le logiciel Latis Pro afin de mesurer le voltage et de tracer
+    des graphqiues. De plus nous allons déterminer quelle est la zone du pied la plus intéressante pour placer la cellule.
 </p>
 
 <p id="mat">Matériel :<br/> Cellule piezoélectrique :<br/>
@@ -27,7 +27,7 @@
     <img src="data/voltmarche1_milieu.JPG" /><br/> Cette fois-ci, on atteint 3V à chaque pas, le milieu du pied est donc bien plus aproprié afin de placer une cellule.<br/> Sous le talon :<br/>
     <video src="data/arriere1.mp4" controls></video>
     <img src="data/voltmarche3_arriere.JPG" /><br/> Sous le talon, le voltage est légèrement plus faible, on atteint 2V à chaque pas<br/> Ensuite, nous avons décidé de tester une cellule dans la chaussure :<br/>
-    <img src="data/voltmarche4_interne.JPG" /><br/> Le résultat est très décevant, on atteint à peine 1V</p>
+    <img src="data/voltmarche4_interne.JPG" id="lastpict" /><br/> Le résultat est très décevant, on atteint à peine 1V</p>
 
 <p>Conclusion :<br/> Nous avons pu observer que en mettant une cellule sous le milieu du pied, on pouvait obtenir un voltage satisfaisant</p>
 
