--- a/index.html
+++ b/index.html
@@ -11,31 +11,34 @@
 </head>
 
 <body>
-    <header>
-        <h1>Des objets connectés autonomes</h1>
-        <h4>TPE de Bilal Molly, Malo Lereste et Barthélémy Paléologue</h4>
-    </header>
-    <nav id="nav">
-        <ul id="menu">
-            <li><a href="presentation.html">Présentation</a></li>
-            <li><a>Expérimentations</a>
-                <ul>
-                    <li><a href="solar.html">Capteur Solaire</a></li>
-                    <li><a href="piezo.html">Piezoélectricité</a></li>
-                    <li><a href="seebek.html">L'effet seebeck</a></li>
-                </ul>
-            </li>
-            <li><a href="app.html">Applications</a></li>
-            <li><a href="annexes.html">Annexes</a>
-                <ul>
-                    <li><a href="biblio.html">Bibliographie</a></li>
-                    <li><a href="photos.html">Photos</a></li>
-                    <li><a href="graph.html">Graphiques</a></li>
-                </ul>
-            </li>
-        </ul>
 
-    </nav>
+    <header id="header2">
+
+        <nav id="nav">
+            <h1>Des objets connectés<br/> autonomes</h1>
+            <ul id="menu">
+                <li><a href="presentation.html">Présentation</a></li>
+                <li><a>Expérimentations</a>
+                    <ul>
+                        <li><a href="solar.html">Capteur Solaire</a></li>
+                        <li><a href="piezo.html">Piezoélectricité</a></li>
+                        <li><a href="seebek.html">L'effet seebeck</a></li>
+                    </ul>
+                </li>
+                <li><a href="app.html">Applications</a></li>
+                <li><a href="annexes.html">Annexes</a>
+                    <ul>
+                        <li><a href="biblio.html">Bibliographie</a></li>
+                        <li><a href="photos.html">Photos</a></li>
+                        <li><a href="graph.html">Graphiques</a></li>
+                    </ul>
+                </li>
+            </ul>
+
+        </nav>
+
+    </header>
+
     <section id="count">
         <div id="prev" class="button">&lt</div>
         <div id="toggleDiapo">Diapo</div>
