texte précisant avec quel navigateur ouvrir le site

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     </section>
     <hr/>
     <section id="content">
-
+      <h3><center>Ce site doit se lancer avec firefox.</center></h3>
     </section>
     <hr/>
     <footer>
         <p>
-            Groupe 3 : Bilal Molli - Barthélémy Paléologue - Le Reste Malo<br/> 1<sup>ère</sup>Se, Loquidy<br/>
+            Groupe 3 : Bilal Molli - Barthélémy Paléologue - Malo Le Reste<br/> 1<sup>ère</sup>Se, Loquidy<br/>
         </p>
     </footer>
 </body>
