SUPPR USELESS CONTENT + JAPON

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <hr/>
     <footer>
         <p>
-            Groupe 3 : Bilal Molli - Barthélémy Paléologue - Malo Le Reste<br/> 1<sup>ère</sup>Se, Loquidy<br/>
+            Bilal Molli - Barthélémy Paléologue - Malo Le Reste<br/> 1<sup>è</sup>Se, Loquidy<br/>
         </p>
     </footer>
 </body>
