FEED PRESENTATION.HTML

--- a/presentation.html
+++ b/presentation.html
@@ -13,9 +13,15 @@
     trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce probème.</p>
 
 
-<h3>L'énergie solaire</h3>
+<h3>L'effet photovoltaïque</h3>
 
-<p></p>
+<h4>Définition :</h4>
+
+<p style="width:80%;float:left;">"L’effet photovoltaïque est obtenu par absorption des photons dans un matériau semi-conducteur qui génère alors des paires électrons-trous (excitation d'un électron de la bande de valence vers la bande de conduction) créant une tension ou un courant électrique"<sub>Source:<i>http://www.wikipedia.org/</i></sub></p>
+
+<img style="width:20%;float:left;" src="photovolt.png" />
+
+<hr/>
 
 <h3>La piezoélectricité</h3>
 
@@ -25,6 +31,15 @@
     alimenter un bracelet connecté qui se chargerait de collecter les données sur cette même course.</p>
 <img style="width:20%;float:left;" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/SchemaPiezo.gif" />
 
+<hr/>
+
 <h3>L'effet seebeck</h3>
 
-<p></p>
+<h4>Définition :</h4>
+<p style="width:80%;float:left;">"L’effet   Seebeck   se   manifeste   par   l'apparition   
+    d'une   tension   produite   par   la   différence   de   
+    température  entre  des  jonctions  de  plusieurs  corp
+    s  conducteurs.  C’est  un  effet  thermoélectrique  
+    découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<sub>Source:<i>http://www2.ac-lyon.fr</i></sub>
+    </p>
+<img style="width:20%;float:left;" src="seebeck.bmp" />
