--- a/piezo.html
+++ b/piezo.html
@@ -33,7 +33,7 @@
 
 <p>Partie 2 : Trouver l'intensité générée (avec des maths)</p>
 
-<p>On a F la pression appliquée par Bilal à chaque pas (la moitié de son poid) sur la surface de la cellule, d33 le coefficient piezoélectrique qui dépend du matériau de la cellule (ici du quartz) et Q la charge électrique générée par la contrainte mechanique<br/>    Or comme nous l'ont appris les documents scientifiques (allez check la bibliographie pour plus d'informations) que nous avons consultés :<br/> Q = d33 x F<br/> On sait que F = 196.2N/2.8x10<sup>-15</sup>m<sup>2</sup> et d33 = 2.33x10<sup>-12</sup><br/>    Par conséquent, dans le cas de Bilal, la charge en Coulombs générée par Bilal à chaque pas est de 1.456x10<sup>-6</sup>C<br/> Or 1C = 1000mAs donc Bilal génère 1.456x10<sup>-3</sup>mAs ce qui nous fait donc à peu près 5mAh.<br/> Cela signifie que
+<p>On a F la pression appliquée par Bilal à chaque pas (la moitié de son poid) sur la surface de la cellule, d33 le coefficient piezoélectrique qui dépend du matériau de la cellule (ici du quartz) et Q la charge électrique générée par la contrainte mechanique<br/>    Or comme nous l'ont appris les documents scientifiques (allez check la bibliographie pour plus d'informations) que nous avons consultés :<br/> <i>Q = d33 x F</i><br/> On sait que <i>F = 196.2N/2.8x10<sup>-15</sup>m<sup>2</sup></i> et <i>d33 = 2.33x10<sup>-12</sup></i><br/>    Par conséquent, dans le cas de Bilal, la charge en Coulombs générée par Bilal à chaque pas est de 1.456x10<sup>-6</sup>C<br/> Or <i>1C = 1000mAs</i> donc Bilal génère 1.456x10<sup>-3</sup>mAs ce qui nous fait donc à peu près 5mAh.<br/> Cela signifie que
     pendant une marche de 1h, Bilal peut générer 5mA, ce qui permettrait de rechrger une batterie de 3500mAh à hauteur de 0.15%</p>
 
 
