GOOD FILE CONTENT

--- a/seebeck.html
+++ b/seebeck.html
@@ -1,1 +1,23 @@
-<h3>L'effet Seebeck</h3>
+<h3>L'effet seebek</h3>
+
+<h4>Expériences</h4>
+
+
+<h5>Expérience 1</h5>
+
+<p>Nous allons chercher une fonction qui à toute différence de température &Delta;T en Kelvin associe une tension U en Volt</p>
+
+<p>Matériel :<br/> x1 Chauffage<br/> x1 Module à effet Seebeck<br/> x1 Un bécher<br/> x1 De l’eau du robinet<br/> x1 Un multimètre<br/> x1 Un dissipateur thermique (puissance max dissipé 65W) => Ventirad de PC<br/> x1 Une résistance de 10Ω
+</p>
+
+<p>Protocole Expérimental :<br/>On fait chauffer de l’eau dans un bécher jusqu’à une température plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module Seebeck dans l’eau pour faire chauffer l’une de ses deux faces.
+    On utilise le dissipateur thermique pour refroidir l’autre face du Seebeck. De cette différence de température naît ainsi un courant électrique. Nous établissons alors un tableau qui, à toute différence de température &Delta;T, associe la tension
+    U spécifiée en circuit ouvert. Nous pouvons alors tracer un graphique de ces résultats. Il en résulte une droite passant par l’origine, dont nous pouvons calculer le coefficient directeur appelé coefficient Seebeck. Par la suite, nous pouvons brancher
+    le module en série avec une résistance de 10Ω, et grâce à la relation U=RxI , en déduire l’intensité parcourant le circuit.
+</p>
+
+<p>Résultats :<br/><img src="graph/dtu.png" /></p>
+
+<h5>Expérience 2</h5>
+
+<p>Nous allons chercher à calculer la résistance interne du module à effet Seebeck, cela nous aidera à trouver une fonction qui à toute tension U en Volt associe une intensité I en Ampère.</p>
