--- a/seebeck.html
+++ b/seebeck.html
@@ -21,3 +21,12 @@
 <h5>Expérience 2</h5>
 
 <p>Nous allons chercher à calculer la résistance interne du module à effet Seebeck, cela nous aidera à trouver une fonction qui à toute tension U en Volt associe une intensité I en Ampère.</p>
+
+
+
+<p>Protocole Expérimental : <br/> Nous refaisons le montage précédent. En ajoutant un ampèremètre en série dans le système ainsi qu’une résistance de 10Ω, nous allons calculer la résistance interne du module à effet Seebeck, ce qui nous permettra de trouver
+    une fonction qui à toute tension U associe une intensité I. Nous utiliserons la relation U = R x I. Résultats : On sait que R=10+x où x représente la résistance interne du module à effet Seebeck et 10 la résistance déjà présente dans le circuit. De
+    plus, nous pouvons mesurer l’intensité avec l’ampèremètre et la tension avec le voltmètre. On en déduit les relations suivantes : I = U/R ⇔ I = U/(10+x) ⇔ x=U/I-10 Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans
+    le circuit, on trouve : I = 0,019A et U= 0,36V On en déduit la résistance interne du module à effet Seebeck qui est donc de 8.37Ω. La résistance totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme I=UR, et que R est constant, nous avons trouvé
+    la fonction qui à toute tension mesurée au bornes du module à effet Seebeck associe une intensité électrique. Il s'agit de la fonction f(U) = 18.37U<br/> On en déduit alors la fonction qui à tout I et U associe P : f(I,U) = IxU = 18.37xUxU = 18.37U<sup>2</sup>
+</p>
