--- a/seebeck.html
+++ b/seebeck.html
@@ -7,7 +7,7 @@
 
 <p>Nous allons chercher une fonction qui à toute différence de température &Delta;T en Kelvin associe une tension U en Volt</p>
 
-<p>Matériel :<br/> x1 Chauffage<br/> x1 Module à effet Seebeck<br/> x1 Un bécher<br/> x1 De l’eau du robinet<br/> x1 Un multimètre<br/> x1 Un dissipateur thermique (puissance max dissipé 65W) => Ventirad de PC<br/> x1 Une résistance de 10Ω
+<p>Matériel :<br/> x1 Chauffage<br/> x1 Module à effet Seebeck<br/> x1 Un bécher<br/> x1 De l’eau du robinet<br/> x1 Un multimètre<br/> x1 Un dissipateur thermique (puissance max dissipée 65W) => Ventirad de PC<br/> x1 Une résistance de 10Ω
 </p>
 
 <p>Protocole Expérimental :<br/>On fait chauffer de l’eau dans un bécher jusqu’à une température plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module Seebeck dans l’eau pour faire chauffer l’une de ses deux faces.
