--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Des objets connectés autonomes</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 </head>
 
 <body>
@@ -50,7 +50,9 @@
     </section>
     <hr/>
     <section id="content">
-      <h3><center>Ce site doit se lancer avec firefox.</center></h3>
+        <h3>
+            <center>Ce site doit se lancer avec firefox.</center>
+        </h3>
     </section>
     <hr/>
     <footer>
