--- a/seebeck.html
+++ b/seebeck.html
@@ -18,6 +18,10 @@
     le module en série avec une résistance de 10Ω, et grâce à la relation U=RxI , en déduire l’intensité parcourant le circuit.
 </p>
 
+<p>Montage :<br/>
+    <img width="50%" src="data/seebeck.jpg" /><br/>
+    <img width="10%" src="data/mesureseebeck.jpg" /></p>
+
 <p>Résultats :<br/><img src="graph/dtu.png" /></p>
 
 <h5>Expérience 2</h5>
@@ -31,7 +35,8 @@
     plus, nous pouvons mesurer l’intensité avec l’ampèremètre et la tension avec le voltmètre. On en déduit les relations suivantes : I = U/R ⇔ I = U/(10+x) ⇔ x=U/I-10 Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans
     le circuit, on trouve : I = 0,019A et U= 0,36V On en déduit la résistance interne du module à effet Seebeck qui est donc de 8.37Ω. La résistance totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme I=U/R, et que R est constant, nous avons trouvé
     la fonction qui à toute tension mesurée au bornes du module à effet Seebeck associe une intensité électrique. Il s'agit de la fonction f(U) = U/18.37<br/> On en déduit alors la fonction qui à tout I et U associe P : f(I,U) = IxU = (1/18.37)xUxU =
-    U<sup>2</sup>/18.37</p>
+    U
+    <sup>2</sup>/18.37</p>
 
 <img src="graph/pu.png" />
 
