--- a/seebeck.html
+++ b/seebeck.html
@@ -1,6 +1,9 @@
 <h3>L'effet Seebek</h3>
 
-
+<p>
+Le module à effet Seebeck permet de produire de l'énergie à partir d'une différence de température entre les deux faces du module. La face exposée à la plus grande température absorbe la chaleur et l'autre la rejète, ce processus génère un peu d'énergie que l'on peut récupérer.<br/>
+On peut aussi alimenter le module, il absorbera la chaleur d'un coté et la rejetera de l'autre en fonction du sens du courant. Cependant, ce n'est pas ce que l'on cherche à faire ici (on veut récupérer de l'énergie, pas l'utiliser).<br/>
+</p>
 
 <h4>Expériences</h4>
 
