--- a/presentation.html
+++ b/presentation.html
@@ -36,10 +36,9 @@
 <h3>L'effet seebeck</h3>
 
 <h4>Définition :</h4>
-<p style="width:80%;float:left;">"L’effet   Seebeck   se   manifeste   par   l'apparition   
-    d'une   tension   produite   par   la   différence   de   
-    température  entre  des  jonctions  de  plusieurs  corp
-    s  conducteurs.  C’est  un  effet  thermoélectrique  
+<p style="width:80%;float:left;">"L’effet   Seebeck   se   manifeste   par   l'apparition
+    d'une   tension   produite   par   la   différence   de
+    température  entre  des  jonctions  de  plusieurs  corps  conducteurs.  C’est  un  effet  thermoélectrique  
     découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<sub>Source:<i>http://www2.ac-lyon.fr</i></sub>
     </p>
 <img style="width:20%;float:left;" src="seebeck.bmp" />
