--- a/presentation.html
+++ b/presentation.html
@@ -8,9 +8,9 @@
 
 <h3>L'énergie et les objets connectés</h3>
 
-<p>Le nombre d'objets connectés est en constante augmentation. De votre téléphone à votre montre en passant par votre réfrigérateur, ils sont partout. Nous sommes de plus en plus nombreux à en avoir et nous en avons de plus en plus par personne (On estime leur
-    nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tout ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu recyclées. Il faut donc
-    trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce probème.</p>
+<p>Le nombre d'objets connectés est en constante augmentation. De votre téléphone à votre montre en passant par votre réfrigérateur, ils sont partout. Nous sommes de plus en plus nombreux à en avoir et nous en avons de plus en plus par personne (On estime
+    leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tout ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu recyclées. Il faut
+    donc trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce probème.</p>
 
 
 <h3>L'effet photovoltaïque</h3>
@@ -36,10 +36,9 @@
 <h3>L'effet seebeck</h3>
 
 <h4>Définition :</h4>
-<p style="width:80%;float:left;">"L’effet   Seebeck   se   manifeste   par   l'apparition   
-    d'une   tension   produite   par   la   différence   de   
-    température  entre  des  jonctions  de  plusieurs  corp
-    s  conducteurs.  C’est  un  effet  thermoélectrique  
-    découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<sub>Source:<i>http://www2.ac-lyon.fr</i></sub>
-    </p>
+<p style="width:80%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corp s conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<sub>Source:<i>http://www2.ac-lyon.fr</i></sub>
+</p>
 <img style="width:20%;float:left;" src="seebeck.bmp" />
+
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
