--- a/seebeck.html
+++ b/seebeck.html
@@ -1,6 +1,6 @@
 <h3>L'effet Seebek</h3>
 
-
+<p>When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$</p>
 
 <h4>Expériences</h4>
 
@@ -47,3 +47,6 @@
 </p>
 
 <img src="graph/pdt.png" />
+
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
