--- a/solar.html
+++ b/solar.html
@@ -1,1 +1,4 @@
 <h3>L'énergie solaire</h3>
+
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
