--- a/graph.html
+++ b/graph.html
@@ -1,1 +1,3 @@
 <h3>Graphiques</h3>
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
