ajout d'une présentation

--- a/solar.html
+++ b/solar.html
@@ -1,4 +1,8 @@
 <h3>L'énergie solaire</h3>
 
+<p>
+L'énergie solaire est maintenant très connue et de plus en plus utilisée. C'est une énergie renouvellable possédant un bon rendement (classique, mais efficace).<br/>
+Nous allons chercher à utiliser un petit panneau solaire afin d'alimenter un objet connecté, qu'il soit à l'intérieur ou à l'extérieur du batiment.<br/>
+</p>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
