DEBUT CAPTEUR SOLAIRE

--- a/solar.html
+++ b/solar.html
@@ -1,4 +1,11 @@
 <h3>L'énergie solaire</h3>
 
+<p>
+    Le Capteur solaire permet de créer de l'énergie à partir d'une stimulation photonique d'une cellule photovoltaïque.<br/>
+</p>
 
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
+<h4>Expériences</h4>
+
+<p>Nous allons chercher la résistance pour laquelle la puissance générée est maximale.</p>
+
+<h5>Expérience 1</h5>
