RANGEMENT DES PHOTOS

--- a/piezo.html
+++ b/piezo.html
@@ -14,20 +14,20 @@
 </p>
 
 <p id="mat">Matériel :<br/> Cellule piezoélectrique :<br/>
-    <img src="data/piezo.jpg" /><br/> Centrale Latis :<br/>
-    <img src="data/latis.jpg" /><br/> Du scotch :<br/>
-    <img src="data/scotch.jpg" /><br/> et Bilal :<br/>
+    <img src="data/piezo/piezo.jpg" /><br/> Centrale Latis :<br/>
+    <img src="data/piezo/latis.jpg" /><br/> Du scotch :<br/>
+    <img src="data/piezo/scotch.jpg" /><br/> et Bilal :<br/>
     <img src="data/bilal.jpg" /><br/>
 </p>
 
 <p id="pr">Résultats :<br/> Quand Bilal marche 10s avec la cellule piezoélectrique sous la pointe de sa chaussure : <br/>
-    <video src="data/avant1.mp4" controls></video>
-    <img src="data/voltmarche2_devant.JPG" /><br/> On peut observer que l'on atteint tout juste 1V à chaque pas.<br/> Sous le milieu du pied :<br/>
-    <video src="data/milieu1.mp4" controls></video>
-    <img src="data/voltmarche1_milieu.JPG" /><br/> Cette fois-ci, on atteint 3V à chaque pas, le milieu du pied est donc bien plus aproprié afin de placer une cellule.<br/> Sous le talon :<br/>
-    <video src="data/arriere1.mp4" controls></video>
-    <img src="data/voltmarche3_arriere.JPG" /><br/> Sous le talon, le voltage est légèrement plus faible, on atteint 2V à chaque pas<br/> Ensuite, nous avons décidé de tester une cellule dans la chaussure :<br/>
-    <img src="data/voltmarche4_interne.JPG" id="lastpict" /><br/> Le résultat est très décevant, on atteint à peine 1V</p>
+    <video src="data/piezo/avant1.mp4" controls></video>
+    <img src="data/piezo/voltmarche2_devant.JPG" /><br/> On peut observer que l'on atteint tout juste 1V à chaque pas.<br/> Sous le milieu du pied :<br/>
+    <video src="data/piezo/milieu1.mp4" controls></video>
+    <img src="data/piezo/voltmarche1_milieu.JPG" /><br/> Cette fois-ci, on atteint 3V à chaque pas, le milieu du pied est donc bien plus aproprié afin de placer une cellule.<br/> Sous le talon :<br/>
+    <video src="data/piezo/arriere1.mp4" controls></video>
+    <img src="data/piezo/voltmarche3_arriere.JPG" /><br/> Sous le talon, le voltage est légèrement plus faible, on atteint 2V à chaque pas<br/> Ensuite, nous avons décidé de tester une cellule dans la chaussure :<br/>
+    <img src="data/piezo/voltmarche4_interne.JPG" id="lastpict" /><br/> Le résultat est très décevant, on atteint à peine 1V</p>
 
 <p>Conclusion :<br/> Nous avons pu observer que en mettant une cellule sous le milieu du pied, on pouvait obtenir un voltage satisfaisant</p>
 
