--- a/seebeck.html
+++ b/seebeck.html
@@ -22,10 +22,10 @@
 </p>
 
 <p>Montage :<br/>
-    <img width="50%" src="data/seebeck.jpg" /><br/>
-    <img width="10%" src="data/mesureseebeck.jpg" /></p>
+    <img width="50%" src="data/seebeck/seebeck.jpg" /><br/>
+    <img width="10%" src="data/seebeck/mesureseebeck.jpg" /></p>
 
-<p>Résultats :<br/><img src="graph/dtu.png" /></p>
+<p>Résultats :<br/><img src="graph/seebeck/dtu.png" /></p>
 
 <h5>Expérience 2</h5>
 
@@ -41,7 +41,7 @@
     U
     <sup>2</sup>/18.37</p>
 
-<img src="graph/pu.png" />
+<img src="graph/seebeck/pu.png" />
 
 
 
@@ -49,4 +49,4 @@
     De plus, on a U = 0.0305&Delta;T, donc on en déduit f(&Delta;T) = 18.37(0.0305&Delta;T)<sup>2</sup>.
 </p>
 
-<img src="graph/pdt.png" />
+<img src="graph/seebeck/pdt.png" />
