--- a/solar.html
+++ b/solar.html
@@ -13,4 +13,90 @@
     qu'il soit à l'intérieur ou à l'extérieur du batiment.<br/>
 </p>
 
+<p>Tout d'abord, nous allons lister les tensions et les intensités mesurées avec différentes résistances, nous pourrons alors en faire des représentations graphiques.</p>
+
+<p>Matériel:<br/>x1 cellule solaire
+    <br/>x1 réostat
+    <br/>x1 ampèremètre
+    <br/>x1 voltmètre
+    <br/>x1 luxmètre</p>
+
+<p>Nous avons pu alors faire ces relevés :</p>
+
+<table border="1">
+    <tr>
+        <td>Intensité</td>
+        <td>Tension</td>
+        <td>Résistance</td>
+    </tr>
+    <tr>
+        <td>0,065</td>
+        <td>34</td>
+        <td>100</td>
+    </tr>
+    <tr>
+        <td>0,426</td>
+        <td>32,8</td>
+        <td>90</td>
+    </tr>
+    <tr>
+        <td>0,471</td>
+        <td>31,8</td>
+        <td>87</td>
+    </tr>
+    <tr>
+        <td>0,55</td>
+        <td>27,4</td>
+        <td>85</td>
+    </tr>
+    <tr>
+        <td>0,585</td>
+        <td>24,2</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>0,614</td>
+        <td>17,3</td>
+        <td>70</td>
+    </tr>
+    <tr>
+        <td>0,626</td>
+        <td>13,2</td>
+        <td>60</td>
+    </tr>
+    <tr>
+        <td>0,630</td>
+        <td>10,6</td>
+        <td>50</td>
+    </tr>
+    <tr>
+        <td>0,634</td>
+        <td>8,9</td>
+        <td>40</td>
+    </tr>
+    <tr>
+        <td>0,636</td>
+        <td>7,7</td>
+        <td>30</td>
+    </tr>
+    <tr>
+        <td>0,638</td>
+        <td>6,7</td>
+        <td>20</td>
+    </tr>
+    <tr>
+        <td>0,639</td>
+        <td>6</td>
+        <td>10</td>
+    </tr>
+    <tr>
+        <td>0,64</td>
+        <td>5,4</td>
+        <td>0</td>
+    </tr>
+</table>
+
+<img src="graph/sol/ir.png" />
+<img src="graph/sol/tr.png" />
+<img src="graph/sol/pt.png" />
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
