--- a/solar.html
+++ b/solar.html
@@ -25,9 +25,9 @@
 
 <table border="1">
     <tr>
-        <td>Intensité</td>
-        <td>Tension</td>
-        <td>Résistance</td>
+        <th>Intensité (en mA)</th>
+        <th>Tension (en V)</th>
+        <th>Résistance (en &Omega;)</th>
     </tr>
     <tr>
         <td>0,065</td>
